# Stanford-Ribonanza-RNA-Folding

./: .gitignore  README.md  database.sql  example_path.tfrecord  explore0.ipynb  explore1.ipynb  explore2.ipynb  explore3.ipynb  explore4.ipynb  explore5.ipynb  explore6.ipynb  main.py  pyproject.toml  srrf-transformer-tpu-inference.ipynb  srrf-transformer-tpu-training.ipynb
.Trash-1000/files/: explore5.ipynb
.Trash-1000/info/: explore2.ipynb.trashinfo  explore5.ipynb.trashinfo
.ipynb_checkpoints/: Explore-checkpoint.ipynb  explore0-checkpoint.ipynb  explore1-checkpoint.ipynb  explore2-checkpoint.ipynb  explore3-checkpoint.ipynb  explore5-checkpoint.ipynb  explore6-checkpoint.ipynb
rna_model/: __init__.py  utils.py
rna_model/model/: __init__.py  layers.py
rna_model/model/performer/fast_attention/tensorflow/: fast_attention.py  fast_attention_test.py
tests/: test_all.py  test_layers.py
